--- a/.babelrc
+++ b/.babelrc
@@ -4,9 +4,11 @@
       [
          "babel-preset-env",
          {
-            "targets": {
-               "node": "6.10"
-            }
+             "targets": {
+				   "browsers": [
+					   "IE >= 11"
+				   ]
+			   }
          }
       ]
    ]
